--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <title>Landing Page React.js</title>
-       
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/46e737794b.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="/4geeks.ico"><script defer src="/bundle.js"></script></head>
+        <title>Landing Page React.js</title>
+    </head>
     <body>
         <div id="app"></div>
 
